# MatchApp

./: .gitignore  Match-app.pptm  client-server-commands.txt  log.csv
Client Side/: CMakeLists.txt  ConsolView.cpp  ConsolView.h  Controller.cpp  Controller.h  ErrorMessages.h  IController.h  IModel.h  IState.h  IView.h  Model.cpp  Model.h  OutputUpdate.cpp  OutputUpdate.h  Parser.cpp  Parser.h  TestState.cpp  TestState.h  main.cpp
Client Side/Commands/: ExitCommand.cpp  ExitCommand.h  ICommand.h
Users/0/: user.xml
Users/1/: user.xml
Users/10/: user.xml
Users/11/: user.xml
Users/12/: user.xml
Users/2/: user.xml
Users/3/: user.xml
Users/4/: user.xml
Users/5/: user.xml
Users/6/: user.xml
Users/7/: user.xml
Users/8/: user.xml
Users/9/: user.xml
src/: Main.java
src/Command/: ICommand.java  Lexer.java  Parser.java
src/Command/Commands/: BusinessInformationCommand.java  CloseCommand.java  GetKMatchesCommand.java  GetUserThatLikedCommand.java  IsUserRegisteredCommand.java  LikeCommand.java  RegisterNewUserCommand.java
src/DataBase/: FilesDataBase.java  IDataBase.java  XMLDataBase.java
src/HelpersClasses/: EditDistanceRecursive.java
src/Logger/: ILogger.java  Logger.java
src/Matcher/: ConsiderateMatcher.java  IMatcher.java  LevenshteinDistanceMatcher.java  RandomMatcher.java
src/Server/: ICommand.java  Lexer.java  Parser.java  Server.java
src/Server/Commands/: IsUserRegisteredCommand.java  (+1 more)
src/User/: IUser.java  RealUser.java  UserProxy.java
src/Visitor/: CustomerCounterVisitor.java  IVisitable.java  IVisitor.java
(+2 files in other folders)
